--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -37,6 +37,7 @@
     display: block;
     margin-bottom: 15px;
 }
+.about-us-text b {font-size: 18px;}
 .hm-services-sec{display:block; clear:both; position:relative; padding-top:20px; padding-bottom:20px;}
 .hm-services-title{ margin-bottom:40px}
 .hm-services-title p{font-size:16px; margin:0;}
@@ -51,7 +52,7 @@
 .icon-box .box-top, .icon-box .box-body {position: relative; will-change: transform; transition: .33s all ease;}
 .icon-box .box-top {top: 0;}
 .icon-box .box-icon {display:block; margin-bottom:15px;}
-.icon-box h5{line-height: 1.11111;font-size: 16px; font-weight: 700;color: #004D84; margin:0 0 10px; position:relative;}
+.icon-box h5{line-height: 1.11111;font-size: 16px; font-weight: 700;color: #000; margin:0 0 10px; position:relative;}
 .icon-box h5 a{color: #004D84;}
 .text-gray-05 {color: rgba(0,0,0,.5); margin:0;}
 .height-fill{width:80%;margin:15px auto;height:100px}
@@ -70,10 +71,12 @@
     height:75px;
     -webkit-box-shadow: 0 2px 10px rgb(0 0 0 / 20%);
     box-shadow: 0 2px 10px rgb(0 0 0 / 20%);
+    background-color: #004D84;
 }
 .height-fill .height-fill-side i{
-    color:#ca970b;
-    font-size:40px;
+    color:#fff;
+    font-size:35px;
+    font-weight: 600;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -112,10 +115,12 @@
     color: #ffffff;
     box-shadow: 0 -2px 0 0 rgb(24 24 24 / 15%) inset;
     padding: 1.125em 1.875em;
+    border: 2px solid transparent!important;
 }
 .allButton:hover{
-    background-color: #d7be61;
-    color:#fff;
+    background-color: #fff;
+    color:#004d84;
+    border: 2px solid #004d84!important;
 }
 .index-header{
     height:550px;
@@ -286,7 +291,12 @@
     background-color: #fff!important;
     position: relative;
     border-bottom: 1px solid rgba(0,0,0,2.125)!important;
-    border-radius:25px 0!important;
+    /* border-radius:25px 0!important; */
+    cursor: pointer;
+}
+.serviceCard .card-header:hover{
+    box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+    z-index: 2;
 }
 
 /* services css end */
@@ -336,8 +346,8 @@
     transform: skewX(-8deg);
 font-size: 50px;
 position: relative;
-    width: 1.8em;
-    height: 1.8em;
+    width: 1.2em;
+    height: 1.2em;
     line-height: 1.8em;
     flex: 1 0 auto;
     display: block;
@@ -357,7 +367,7 @@ position: relative;
 }
 .column-icon-holder i{
     color:#fff;
-    font-size:40px;
+    font-size:25px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -375,11 +385,13 @@ position: relative;
     letter-spacing: -.03em;
 }
 .service-content-text{
-    padding-top: .7rem;
+    /* padding-top: .7rem; */
+    font-size: 14px;
 }
 .service-content-text-links a{
     color: #6d6c6c;
     text-decoration: none;
+    font-size: 14px;
 }
 .service-content-text-links a:hover{
     color: #000;
@@ -391,7 +403,7 @@ overflow:hidden;
 position:relative;
 height:100%;
 /* transform: rotate(-4deg); */
-border-radius:50px;
+/* border-radius:50px; */
 /* border-bottom:5px solid #004d84;
 border-right: 5px solid #004d84; */
 }
@@ -439,12 +451,18 @@ border-right: 5px solid #004d84; */
     border-radius: 50%;
     font-size: 24px;
 }
+.follow ul li a:hover {
+    text-decoration: none;
+    background-color: #004d84;
+    color: #fff;
+
+}
 .contactBlockContainer{
     background-color: #252525;
 }
 .contactBlock{
     padding:25px 15px;
-    border-radius: 0 0 80px 0;
+    border-radius: 0 0 50px 0;
     background: #fff;
 }
 /* Contact us css end */
@@ -460,6 +478,31 @@ blockquote:before {
     opacity: .1;
     color: currentColor;
 }
+/*About us start*/
+.aboutus-picture-container{
+    height: 490px;
+    width: 490px;
+    /* background-position: 50% 50%; */
+    background-position: center;
+    background-size: cover;
+    background-image: url(../images/img4.jpg);
+    border-radius:50%;
+}
+.aboutus-content{
+    padding: 30px 50px 30px 30px;
+    text-align: justify;
+}
+.aboutus-picture{
+   border-radius:50%;
+   width: 100%;
+}
+.circle{
+    width:80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #004D84;
+}
+/* About us end */
 
 @keyframes scrollEffect{
     0% {
