--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -9,6 +9,8 @@
 .team-member-image img{
   width:100%;
   border-radius:50%;
+  height:100%;
+  object-fit:cover;
 }
 .team-banner{
   display: flex;
