--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,10 +1,10 @@
 /*--- || Loading Circle --- */
 #loader { 
-    border: 12px solid #f3f3f3; 
+    border: 9px solid #f3f3f3; 
     border-radius: 50%; 
-    border-top: 12px solid #004D84; 
-    width: 70px; 
-    height: 70px; 
+    border-top: 9px solid #004D84; 
+    width: 60px; 
+    height: 60px; 
     animation: spin 1s linear infinite;
 }
 @keyframes spin{
@@ -30,6 +30,17 @@
     margin: auto; 
 }
 /*---------*/
+body {
+    font-family: "Jost", sans-serif!important;
+    color: #666666;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    font-weight: normal;
+    overflow-x: hidden !important;
+    background-color: #ffffff;
+}
+body.modal-open{padding: 0px !important;}
 .navHeader{
     background-color: #004D84;
     
@@ -88,7 +99,7 @@
     color:#004D84;
     font-size: 18px;
 }
-.headerLinks a{
+.headerLinks a , .headerLinks-mail a{
     font-family: 'Lato', sans-serif;
     color:rgba(102,102,102,0.85);
     padding:0 10px;
@@ -141,6 +152,42 @@
     padding: 0px;
     width: auto;
     color: #fff;
+}
+.footer-social{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+.footerBox .footer-social ul {
+    padding: 0px;
+}
+.footerBox .footer-social ul li {
+    margin: 0px 4px 0px 0px;
+    padding: 0px;
+    list-style: none;
+    display: inline-block;
+}
+.footerBox .footer-social ul li a {
+    font-weight: 300;
+    transition: 0.5s ease;
+    display: inline-block;
+    padding: 3px;
+    width: 32px;
+    height: 32px;
+    border-radius: 100%;
+    border: solid 4px #f1f1f1;
+    background: #f1f1f1;
+    text-align: center;
+    color: #000000;
+}
+.footerBox .footer-social ul li a:hover {
+    border: solid 4px #000000;
+    background: #000000;
+    color: #fff;
+    text-decoration: none !important;
+}
+.footerBox .footer-social i {
+    font-size: 18px;
 }
 .footerBox h3 {
     margin: 0 0 10px 0px;
