--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -325,12 +325,18 @@
     padding: 20px;
     border: 0.5px solid rgba(0,0,0,0.06);
     vertical-align: center;
-    box-shadow: 0px 0px 15px rgb(0 0 0 / 30%);
-    height:190px;
+    /* box-shadow: 0px 0px 15px rgb(0 0 0 / 30%);
+    height:190px; */
 }
+.form-title{font-size: 24px;
+    font-weight: 700;
+    color: #004d84;
+    text-transform: uppercase;
+    padding-bottom: 16px;}
 .column-inner .column-inner-content{
     width: 100%;
     height: 100%;
+    margin-top:10px;
 }
 .column-inner .column-inner-content .column-service{
     display: inline-flex;
@@ -348,8 +354,8 @@
     transform: skewX(-8deg);
 font-size: 50px;
 position: relative;
-    width: 1.2em;
-    height: 1.2em;
+    width: 1em;
+    height: 1em;
     line-height: 1.8em;
     flex: 1 0 auto;
     display: block;
@@ -382,9 +388,8 @@ position: relative;
     flex: 1 1 auto;
 }
 .service-content-title{ 
-    font-size: 1.5625em;
-    font-weight: 700;
-    letter-spacing: -.03em;
+    font-size: 20px;
+    font-weight: 600;
 }
 .service-content-text{
     /* padding-top: .7rem; */
@@ -461,13 +466,15 @@ border-right: 5px solid #004d84; */
     color: #fff;
 
 }
-.contactBlockContainer{
+/* .contactBlockContainer{
     background-color: #252525;
-}
+} */
 .contactBlock{
-    padding:25px 15px;
-    border-radius: 0 0 50px 0;
+    margin-top: 50px;
     background: #fff;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 30px #6e45e11f;
 }
 /* Contact us css end */
 blockquote:before {
