--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -264,6 +264,42 @@
     top: 36%;
     margin-left: -8%;
 }
+.visionContainer{
+    padding:50px 0;
+    background:#f6f6f6;
+}
+.visionBlock{
+    padding:30px;
+    border-radius:10px;
+    box-shadow: 0px 0px 15px rgb(0 0 0 / 10%);
+    background-color: #fff;
+    height: 372px;
+    overflow-y:auto;
+}
+.visionBlockIcon{
+    position: relative;
+    width:100px;
+}
+.visionFont{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: none !important;
+}
+.visionFont i{
+    display: flex;
+    font-weight: 400;
+    letter-spacing: 0;
+    font-size: 35px;
+}
+.visionFont img{
+    width:50px;
+}
 /* Services css start */
 .serviceTitle{
     color: #004D84;
